gccida/g3/extract_left_shift
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6738:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6739:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6743:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v7; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6744:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6765:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6815:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6827:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/combine.c:6836:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/extract_left_shift/src/obj/combine.o] Error 1
